Add many new functions
Co-authored-by: CuzImBisonratte <CuzImBisonratte@users.noreply.github.com>

--- a/login/login.html
+++ b/login/login.html
@@ -19,8 +19,9 @@
             <h1 id="formlog_title">Log in</h1>
             <hr>
             <form action="login.php" method="post">
-                Deine Mail:<br>
-                <input type="email" size="40" maxlength="250" name="email"><br><br> Dein Passwort:<br>
+                Deine Benutzername:<br>
+                <input type="username" size="40" maxlength="250" name="username"><br>
+                <br> Dein Passwort:<br>
                 <input type="password" size="40" maxlength="250" name="passwort"><br>
 
                 <input id="register_button" type="submit" value="Log in">
