Main admin page structures and home blogs sorted
Co-authored-by: CuzImBisonratte <CuzImBisonratte@users.noreply.github.com>

--- a/login/login.html
+++ b/login/login.html
@@ -24,8 +24,10 @@
                 <br> Dein Passwort:<br>
                 <input type="password" size="40" maxlength="250" name="passwort"><br>
 
-                <input id="register_button" type="submit" value="Log in">
-                <a href="../index.php">Home</a>
+                <div id="bottom_buttons">
+                    <input id="register_button" type="submit" value="Log in">
+                    <a href="../home/">Home</a>
+                </div>
             </form>
         </div>
     </div>
